HTML and CSS fix 3

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         <div class="conversion">
           <div class="lbs">
             <label id="label-from" for="lbs">Lbs</label>
-            <input type="text" name="lbs" id="lbs" />
+            <input type="number" name="lbs" id="lbs" />
           </div>
           <i class="fa-solid fa-equals"></i>
           <div class="kg">
             <label id="label-to" for="kg">Kg</label>
-            <input type="text" name="kg" id="kg" />
+            <input type="number" name="kg" id="kg" />
           </div>
           <button type="button" id="swap">
             <i class="fa-solid fa-right-left"></i>
